@@ -21,6 +21,7 @@ Comment=Qt5 Configuration Tool
 
 
 
+
 Exec=qt5ct
 Icon=preferences-desktop-theme
 Terminal=false
@@ -29,6 +30,6 @@ Categories=Settings;DesktopSettings;Qt;
 
 
 # Translations
-Comment[nl_NL]=Qt5-instellingengereedschap
+Comment[nl_NL]=Qt5-instellingen
 Name[nl_NL]=Qt5-instellingen
 Icon[nl_NL]=preferences-desktop-theme
